# Rust-GraphQL-Server

./: Cargo.toml
src/: main.rs  model.rs  repository.rs
src/model/: group.rs  member.rs
